reverted post method to what it was before
