# documentation/src/main/resources/api.yaml
@@ -53,16 +53,14 @@ paths:
     post:
       tags:
         - KITHUGS
-      parameters:
-        - name: name
-          in: query
-          required: true
-          description: Name.
-          schema:
-            type: string
-            maxLength: 10
-          example: 'John Doe'
-      summary: Post name to db.
+      requestBody:
+        description: Hello request body.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/helloRequest'
+      summary: API to test body validation.
       description: Posting a name longer than 10 characters trigger an validation error.
       responses:
         '200':
